--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@ node_modules
 # Keep environment variables out of version control
 .env
 node_modules/
+prisma/dev.db
 dev.db
 dev.db-journal
 /generated/prisma
