--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-      "test": "echo \"Error: no test specified\" && exit 1",
-      "dev": "nodemon index.js" 
-  },
+    "dev": "nodemon index.js",
+    "seed": "node prisma/seed.js",
+    "test": "echo \"Error: no tests defined yet\" && exit 1"
+    },
   "keywords": [],
   "author": "",
   "license": "ISC",
