--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@ node_modules
 # Keep environment variables out of version control
 .env
 node_modules/
+# Ignore all SQLite databases in prisma/
+prisma/**/*.db
 dev.db
 dev.db-journal
 /generated/prisma
